@@ -193,6 +193,7 @@ We have received the following contributions:
 
  - Franciszek Gorski
    2018-10: Makefile bug fixed
+   2019-07: Statistics enhancements
 
  - Suzanne Goldlust
    2018-10: API documentation
